# mc_mros_reasoner

./: .classpath  .gitignore  .project  CHANGELOG.md  README.md  mros2_reasoner.rosinstall  owlready_mros_reasoner.py  pom.xml
.github/workflows/: main.yml
mc_mros_reasoner_msgs/: CMakeLists.txt  package.xml
mc_mros_reasoner_msgs/action/: MonitorObjective.action  NavigateToPoseQos.action
mros1_examples/: CMakeLists.txt  README.md  package.xml
mros1_examples/launch/: fd1.launch
mros1_examples/src/: listener.py
mros1_reasoner/: CMakeLists.txt  expected_qas.csv  mros1_reasoner.rosinstall  package.xml  requirements.txt  setup.py
mros1_reasoner/config/: nav_config.yaml
mros1_reasoner/launch/: run.launch  test.launch
mros1_reasoner/owl/: MROS_ontology.owl  TEST_URJCpilot.owl  URJCpilot.owl  catalog-v001.xml  navigation_domain_ont.owl  ros_navigation.owl  tomasys.owl
mros1_reasoner/resources/: f2_v3_r3.rossystem  rosmodel.owl
mros1_reasoner/scripts/: error.owl  init_models.py  kb.owl  mros1_reasoner.py  mros1_reasoner_node.py  owl_reasoner.py  rosmodel2owl.py  test_mros1_reasoner.py  tomasys.py
mros1_reasoner/src/mros1_reasoner/: reasoner.py  ros_reasoner.py  tomasys.py
mros1_reasoner/test/: send_qa_value_test.py  send_qa_value_test.test  test_level_1_functional_arch.py  test_level_1_functional_arch.test  test_models_paper.py  test_models_paper.test  test_qa_reception.py  test_qa_reception.test
mros2_mock/: CMakeLists.txt  package.xml
mros2_mock/config/: mock_system_modes.yaml
mros2_mock/launch/: mock.launch.py  mock_node.launch.py
mros2_mock/mros2_mock/: mock_objective.py
mros2_msgs/: CMakeLists.txt  package.xml
mros2_msgs/action/: ControlQos.action  NavigateToPoseQos.action
mros2_msgs/msg/: QoS.msg
mros2_msgs/srv/: MetacontrolFD.srv  NodeMode.srv
mros2_reasoner/: package.xml  setup.cfg  setup.py
mros2_reasoner/launch/: launch_fake_reasoner.launch.py  launch_pilot_urjc_reasoner.launch.py  launch_reasoner.launch.py
mros2_reasoner/mros2_reasoner/: fake_ros_reasoner.py  kb_interface.py  mros2_fake_reasoner_node.py  mros2_publish_qa_node.py  mros2_reasoner_node.py  owl2ready_tomasys.py  owlready2_tomasys.py  reasoner.py  ros_reasoner.py  system_modes_bridge.py  tomasys.py  tomasys_interface.py
mros2_reasoner/owl/: MROS_ontology.owl  example_f1_fd1.owl  kb_hands_on.owl  test1.owl  tomasys.owl
mros2_reasoner/test/: test_flake8.py  test_owl2ready_tomasys.py  test_owlready2_tomasys.py  test_reasoner.py
mros2_reasoner/test/owl/: catalog-v001.xml  test.owl
mros2_wrapper/: CMakeLists.txt  package.xml
mros2_wrapper/include/mros2_wrapper/: mros2_wrapper.hpp  simple_action_client.hpp  simple_action_server.hpp
mros2_wrapper/src/: mros2_wrapper_main.cpp
mros2_wrapper/test/: CMakeLists.txt  test_mros2_wrapper.cpp
src/main/java/nl/chcorbato/: MetacontrolReasoningTests.java  MetacontrolReasoningTests_ABB_s1.java
