<?xml version="1.0"?>
<package format="2">
  <name>mros1_reasoner</name>
  <version>0.1.0</version>
  <description>Implements the meta-controller node for ROS1, including the reasoner</description>
  <author>Carlos Hernandez Corbato (TU Delft Robotics Institute)</author>
  <maintainer email="c.h.corbato@tudelft.nl">Carlos Hernandez Corbato</maintainer>

  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>metacontrol_msgs</exec_depend>
  <exec_depend>mc_mdl_tomasys</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>


</package>
